uri already exist and type uri doesn't exist errors are now mapped